<resources>
    <string name="app_name">PassKeeper</string>
    <string name="auth_hint_username">Username</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_description_username">Enter your username</string>
    <string name="auth_description_password">Enter your password</string>
    <string name="auth_btn_sig_up">Sign up</string>
    <string name="auth_btn_sig_in">Sign in</string>
    <string name="auth_login_process">Wait for authorization in the application</string>
    <string name="auth_error_login_process">All existing fields must be filled in for authorization</string>
    <string name="auth_error_request_421">Authorization error. Incorrect login or password was entered</string>
    <string name="auth_error_create_local_base">Error: unable to generate local database file</string>
    <string name="auth_error_get_json_default">Error: missing local database file</string>
    <string name="auth_error_load_file">Error: unable to generate database</string>
    <string name="auth_error_decrypt_base">Error: database could not be decrypted</string>
    <string name="auth_error_request">Error: an incorrect response was received from the remote server. It is possible that there is no network connection or the remote server is disconnected</string>
    <string name="reg_hint_password">Password *</string>
    <string name="reg_hint_login">Username *</string>
    <string name="reg_hint_duplicate_password">Confirm password *</string>
    <string name="reg_chbox_license">I agree to the license agreement</string>
    <string name="reg_txt_required_fields">* Required</string>
    <string name="reg_btn_next">Next</string>
    <string name="reg_btn_back">Back</string>
    <string name="reg_error_fields">Error: At least 4 characters</string>
    <string name="reg_error_password_fields">Error: Password does not match</string>
    <string name="reg_error_agreement_canceled">You cannot register until you accept the terms of the license agreement</string>
    <string name="reg_error_critical">A critical error has occurred, please repeat the procedure later</string>
    <string name="license_info_dbtn_accept">Accept</string>
    <string name="license_info_dbtn_cancel">Cancel</string>
    <string name="license_info_title_agreement">License agreement</string>
    <string name="n_user_welcome">Welcome</string>
    <string name="n_user_text">We are glad that you have chosen our software product. To continue, select one of two options:</string>
    <string name="n_user_radbtn_auto_gen">Autogenerated secret key</string>
    <string name="n_user_radbtn_enter_key">Enter the secret key</string>
    <string name="n_user_btn_finish">Finish</string>
    <string name="n_user_error_clipboard">The field cannot be empty</string>
    <string name="n_user_ok_clipboard">The text has been copied</string>
    <string name="n_user_title_warning">WARNING</string>
    <string name="n_user_msg_warning">The secret key was not copied. If you don\'t save it, you won\'t be able to access the data. Continue?</string>
    <string name="n_user_msg_warning_continue">We warned you…</string>
    <string name="n_user_dbtn_next">Next</string>
    <string name="n_user_dbtn_cancel">Cancel</string>
    <string name="n_user_error_secret_key">You cannot be registered because the private key cannot be empty</string>
    <string name="l_user_welcome">Welcome</string>
    <string name="l_user_text">You must enter your private key to continue.\n** Reminder: the key was given to you at registration.</string>
    <string name="l_user_btn_next">Next</string>
    <string name="l_user_error_secret_key">Error, you can not continue without the entered secret key</string>
    <string name="main_hint_btn_add">Add</string>
    <string name="main_error_update_local_base">Error: unable to update local database</string>
    <string name="main_error_update_record">Error: unable to update record</string>
    <string name="main_error_delete_record">Error: cannot delete record</string>
    <string name="main_error_base">Critical error: could not bring user data to existing logic</string>
    <string name="main_error_generate_list">Critical error: failed to generate list</string>
    <string name="main_msg_ok_synchronized">Synchronization is complete</string>
    <string name="main_msg_synchronized_process">Synchronization is in progress</string>
    <string name="c_dialog_add_new_record">Adding a new record</string>
    <string name="c_dialog_login">Username/Login *</string>
    <string name="c_dialog_password">Password *</string>
    <string name="c_dialog_btn_add_record">Add</string>
    <string name="c_dialog_btn_cancel">Cancel</string>
    <string name="c_dialog_btn_delete">Delete</string>
    <string name="c_dialog_btn_edit">Edit</string>
    <string name="c_dialog_title">Title</string>
    <string name="main_menu_hint_settings">App settings</string>
    <string name="main_menu_hint_add_record">Add record</string>
    <string name="main_menu_hint_upload">Upload record</string>
    <string name="main_menu_hint_download">Download records</string>
    <string name="set_language">The current language of the application:</string>
    <string name="set_enabled_dark_mode">To enable the dark theme</string>
    <string-array name="language_option">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="app_error_fatal">FATAL error. Please repeat the last steps again</string>
    <string name="license_info_msg_license">"This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.  "</string>
</resources>
