<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="40dp"
    android:paddingRight="50dp"
    tools:context="com.example.passkeeper.GenSecretKey.GenSecretKeyController">


    <TextView
        android:id="@+id/textView_nUserWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/n_user_welcome"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_nUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/n_user_text"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_nUserAutoGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/n_user_radbtn_auto_gen" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_nUserAutoGen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconDrawable="@drawable/ic_content_copy_black_24dp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioButton
            android:id="@+id/radioButton_nUserEnterKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_user_radbtn_enter_key" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_nUserEnterKey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconDrawable="@drawable/ic_content_copy_black_24dp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </RadioGroup>

    <Button
        android:id="@+id/button_nUserCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/n_user_btn_create_account" />

</LinearLayout>
